# libstripe

./: .cirrus.yml  .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
examples/: async_customer.rs  balance.rs  bank.rs  card.rs  charge.rs  countryspec.rs  coupons.rs  credit_note.rs  customer.rs  events.rs  fileupload.rs  invoice.rs  invoiceitems.rs  payouts.rs  plans.rs  product.rs  refund.rs  sku.rs  subscriptions.rs  token.rs  transfer.rs
src/: client.rs  error.rs  lib.rs  util.rs
src/resources/: mod.rs
src/resources/billing/: coupons.rs  credit_notes.rs  discounts.rs  invoiceitems.rs  invoices.rs  mod.rs  plans.rs  subscription_schedules.rs  subscriptions.rs  tax_rates.rs  usage_record.rs
src/resources/checkout/: mod.rs  sessions.rs
src/resources/common/: address.rs  category.rs  currency.rs  mod.rs  object.rs  path.rs
src/resources/connect/: account.rs  applicationfees.rs  applicationrefunds.rs  country.rs  external.rs  mod.rs  persons.rs  topup.rs  transfer_reversal.rs  transfers.rs
src/resources/core/: balance.rs  charges.rs  customer.rs  customer_taxid.rs  disputes.rs  events.rs  file.rs  filelink.rs  mod.rs  paymentintents.rs  payout.rs  product.rs  refunds.rs  tokens.rs
src/resources/fraud/: mod.rs  review.rs  value_list_items.rs  value_lists.rs
src/resources/issuing/: authorizations.rs  cardholders.rs  cards.rs  dispute.rs  mod.rs  transactions.rs
src/resources/orders/: mod.rs  order.rs  returns.rs  sku.rs
src/resources/paymentmethods/: bank.rs  cards.rs  mod.rs  paymentmethods.rs  source.rs
src/resources/sigma/: mod.rs
(+5 files in other folders)
