[package]
name = "libstripe"
version = "0.5.7"
authors = ["Darius C. <darius.clark@bundleofbytes.com>"]
edition = "2018"
description = "Stripe library for rust."
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/bundleofbytes/libstripe"
keywords = ["stripe", "api", "payments"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.4"
reqwest = "0.9"
http = "0.1"
mime = "0.3"
futures = "0.1"


[dev-dependencies]
tokio = "0.1"

[features]
default=[]
async=[]